derive/tests/snapshots/referenced_row_methods/Banner/create_banner.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**Create a row in the `banner` table.

# Foreign keys

Fails with `ReferenceIntegrityViolation` unless each column references a row:

- `server_id`: a row of the `server` table (`self`), or `0`*/
    pub fn create_banner<'a>(
        &'a self,
        banner: CreateBanner,
    ) -> Result<Banner, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let id = u64::default();
        let server_id = banner.server_id.value();
        let banner = Banner { id, server_id };
        let mut the_same_or_another_banner: Option<Banner> = None;
        if server_id.ne(&0) {
            match self.get_server_by_id(banner.get_server_id()) {
                Ok(_) => {}
                Err(_) => {
                    return Err(
                        crate::spacetimedsl::error::SpacetimeDSLError::ReferenceIntegrityViolation(crate::spacetimedsl::error::ReferenceIntegrityViolationError::OnCreateOrUpdate {
                            table_name: "banner".into(),
                            create_or_update: crate::spacetimedsl::error::CreateOrUpdate::Create,
                            column_names_and_row_values: format!(
                                "{{ server_id : {} }}", banner.get_server_id().value()
                            )
                                .into(),
                        }),
                    );
                }
            };
        }
        let unique_column_values = (banner.id.clone(),);
        match self.db().banner().try_insert(banner) {
            Ok(entity) => Ok(entity),
            Err(error) => {
                match error {
                    ::spacetimedb::TryInsertError::UniqueConstraintViolation(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::UniqueConstraintViolation {
                            table_name: "banner".into(),
                            action: crate::spacetimedsl::error::Action::Create,
                            error_from: crate::spacetimedsl::error::ErrorFrom::SpacetimeDB,
                            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                            column_names_and_row_values: format!(
                                "{{ id : {} }}", unique_column_values.0
                            )
                                .into(),
                        })
                    }
                    ::spacetimedb::TryInsertError::AutoIncOverflow(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::AutoIncOverflow {
                            table_name: "banner".into(),
                        })
                    }
                }
            }
        }
    }
}
