derive/tests/snapshots/referenced_row_methods/Banner/get_all_banners.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `banner` table.
    pub fn get_all_banners<'a>(&'a self) -> impl Iterator<Item = Banner> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().banner().iter()
    }
}
