derive/tests/snapshots/referenced_row_methods/Banner/get_banner_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Banner` from the `banner` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_banner_by_id<'a>(
        &'a self,
        id: impl Into<BannerId> + Clone,
    ) -> Result<Banner, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().banner().id().find(id.clone().into().value()) {
            Some(banner) => Ok(banner),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "banner".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Banner` from the `banner` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_banner_by_id<'a>(
        &'a self,
        id: impl Into<BannerId> + Clone,
    ) -> Result<Banner, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().banner().id().find(id.clone().into().value()) {
            Some(banner) => Ok(banner),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "banner".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
