derive/tests/snapshots/referenced_row_methods/Banner/wrapper_methods.snap
---
source: derive/src/characterization_tests.rs
---
impl ServerId {
    /**Get all `Banner` rows whose `server_id` column references this `ServerId`.

Use it like `server_id.get_banners(&dsl)`.*/
    pub fn get_banners<'a, T: 'a + crate::spacetimedsl::ReadContext>(
        &self,
        dsl: impl Into<crate::spacetimedsl::ReadOnlyDSL<'a, T>>,
    ) -> Vec<Banner> {
        dsl.into().get_banners_by_server_id(self).collect()
    }
}
